--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-@import "@arcgis/core/assets/esri/themes/light/main.css";
-
+/* @@Start(imports) */
+@import "https://jsdev.arcgis.com/4.31/@arcgis/core/assets/esri/themes/light/main.css";
+@import "https://jsdev.arcgis.com/calcite-components/2.11.0/calcite.css";
+/* @@End(imports) @@Start(styles) */
 html,
 body,
 arcgis-map {
@@ -8,3 +10,4 @@ arcgis-map {
   margin: 0;
   padding: 0;
 }
+/* @@End(styles) */
